<resources>
    <string name="app_name">RUCafe</string>
    <string-array name="itemNames">
        <item>Yeast Donut: Maple</item>
        <item>Yeast Donut: Glazed</item>
        <item>Yeast Donut: Vanilla Glazed</item>
        <item>Yeast Donut: Chocolate Glazed</item>
        <item>Cake Donut: Maple</item>
        <item>Cake Donut: Vanilla</item>
        <item>Cake Donut: Boston Creme</item>
        <item>Cake Donut: Chocolate Glazed</item>
        <item>Donut Hole: Custard</item>
        <item>Donut Hole: Lemon Cream</item>
        <item>Donut Hole: Raspberry Jelly</item>
        <item>Donut Hole: Strawberry Jelly</item>
    </string-array>
    <string-array name="coffeeSizeNames">
        <item>Short</item>
        <item>Tall</item>
        <item>Grande</item>
        <item>Venti</item>
    </string-array>
    <string-array name="coffeeQtyNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="donutQtyNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="main_menu_title">Main Menu</string>
    <string name="orders_page_title">Your Order</string>
    <string name="ordering_coffee_title">Order Coffee</string>
    <string name="ordering_donut_title">Order Donuts</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="order_donut">Order Donut</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="addins">Addins</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="initial_quantity">0</string>
    <string name="default_price">$0.00</string>
    <string name="size">Size:</string>
    <string name="add_to_order">Add to Order</string>
    <string name="successfully_added_to_order">Successfully added to your order.</string>
    <string name="yeast_donut">Yeast Donut</string>
    <string name="cake_donut">Cake Donut</string>
    <string name="donut_holes">Donut Holes</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="current_price">Current Price:</string>
    <string name="sub_total">Subtotal: </string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="total">Total:</string>
    <string name="remove_selected_item">Remove Item</string>
    <string name="place_order">Place Order</string>
    <string name="show_order">Show Order</string>
    <string name="save_export_order">Export Order</string>
    <string name="remove_selected_order">Remove Order</string>
    <string name="donut_flavor">Donut flavor:</string>
    <string name="donut_type">Donut type:</string>
    <string name="order_successfully_placed">Successfully added to store orders.</string>
    <string name="successfully_removed_order">Successfully removed from store orders.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dollar">$</string>
</resources>