<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:id="@+id/tv_titleStoreOrders"
                    android:text="@string/orders_page_title"
                    android:textSize="20sp"
                    android:textColor="@color/design_default_color_primary_dark"
                    android:layout_weight="1" android:layout_marginStart="10dp"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/tv_subtotalOrderName"
                    android:textSize="15sp"
                    android:textColor="@color/design_default_color_primary"
                    android:text="@string/sub_total"/>

            <TextView
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:id="@+id/tv_subtotalOrder"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="15sp"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:id="@+id/tv_salesTaxOrderName"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="15sp"
                    android:text="@string/sales_tax"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:id="@+id/tv_salesTaxOrder"
                    android:textSize="15sp"
                    android:textColor="@color/design_default_color_primary"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:id="@+id/tv_totalOrderName"
                    android:textSize="15sp"
                    android:textColor="@color/design_default_color_primary"
                    android:text="@string/total"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:id="@+id/tv_totalOrder"
                    android:textSize="15sp"
                    android:textColor="@color/design_default_color_primary"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:id="@+id/lv_listOrder"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_removeStoreOrder"
                    android:text="@string/remove_selected_item"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"/>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <Button
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_showOrder"
                    android:text="@string/place_order"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>